syntax = "proto3";

import "common.proto";
import "action.proto";

option java_multiple_files = true;
option java_package = "oneK.proto.state";

message State {
  oneof state {
    BiddingState bidding = 1;
    ReviewState review = 2;
    StrifeState strife = 3;
    SummaryState summary = 4;
  }
}

message BiddingState {
  repeated Bidder order = 1;
  int32 current = 2;
  repeated Card talon = 3;
  int32 talonSplit = 4;
  map<string, int32> ranking = 5;
}

message Bidder {
  CardHolder holder = 1;
  BiddingAction lastAction = 2;
}

message ReviewState {
  repeated CardHolder order = 1;
  int32 current = 2;
  int32 initialBid = 3;
  repeated Card talon = 4;
  int32 talonSplit = 5;
  repeated Card taken = 6;
  map<string, int32> ranking = 7;
  ToGivePayload toGive = 8;
  int32 changedBid = 9;
}

message StrifeState {
  repeated Strifer order = 1;
  int32 current = 2;
  int32 bid = 3;
  map<string, int32> ranking = 4;
  string currentTriumph = 5;
}

message Strifer {
  CardHolder holder = 1;
  StrifeAction lastAction = 2;
  int32 points = 3;
  bool isConstrained = 4;
}

message SummaryState {
  repeated Player order = 1;
  int32 current = 2;
  map<string, int32> ranking = 3;
}